src/objects/StudentAcademicCourseFromBanner__c.object
<CustomObject>
    <description>Control object for receiving Student Academic Course records from Banner</description>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetencyUnitsIN__c</fullName>
        <label>Competency Units (IN)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompositeKeyIN__c</fullName>
        <description>PIDM + Course Code + Term Code</description>
        <externalId>true</externalId>
        <label>Composite Key (IN)</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CourseCodeIN__c</fullName>
        <label>Course Code (IN)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseTitleIn__c</fullName>
        <label>Course Title (IN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateIN__c</fullName>
        <label>End Date (IN)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDateIN__c</fullName>
        <label>Start Date (IN)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusIN__c</fullName>
        <description>Status of the assessment (passed, not passed, transferred, etc)</description>
        <label>Status (IN)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Academic Course</label>
        <referenceTo>StudentAcademicCourse__c</referenceTo>
        <relationshipLabel>Student Academic Courses From Banner</relationshipLabel>
        <relationshipName>StudentAcademicCoursesFromBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentPIDMIN__c</fullName>
        <label>Student PIDM (IN)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermIN__c</fullName>
        <label>Term (IN)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeIN__c</fullName>
        <description>Obj/Prfm etc</description>
        <label>Type (IN)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Student Academic Course From Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CompetencyUnitsIN__c</columns>
        <columns>CourseCodeIN__c</columns>
        <columns>CourseTitleIn__c</columns>
        <columns>EndDateIN__c</columns>
        <columns>StartDateIN__c</columns>
        <columns>StatusIN__c</columns>
        <columns>StudentAcademicCourse__c</columns>
        <columns>StudentPIDMIN__c</columns>
        <columns>TermIN__c</columns>
        <columns>TypeIN__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CompetencyUnitsIN__c</columns>
        <columns>CourseTitleIn__c</columns>
        <columns>EndDateIN__c</columns>
        <columns>StartDateIN__c</columns>
        <columns>StatusIN__c</columns>
        <columns>StudentAcademicCourse__c</columns>
        <columns>StudentPIDMIN__c</columns>
        <columns>TermIN__c</columns>
        <columns>TypeIN__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
    </listViews>
    <nameField>
        <displayFormat>SACFB-{0}</displayFormat>
        <label>Student Academic Course From Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Academic Courses From Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>